Changed Link Names

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <nav class="topbar">
         <header class="top-line">
             <h1 class="name">Alfieri Constantine Doctolero Unciano</h1>
-            <a  class="contact-tab" href="AlfieriUnciano-Contact.html">Contact</a>
-            <a  class="portfolio-tab" href="AlfieriUnciano-Portfolio.html">Portfolio</a>
-            <a  class="about-tab" href="AlfieriUnciano-About.html">About</a>
+            <a  class="contact-tab" href="Contact.html">Contact</a>
+            <a  class="portfolio-tab" href="ortfolio.html">Portfolio</a>
+            <a  class="about-tab" href="index.html">About</a>
         </header>
     </nav>
     <section class="topborderbar">
